updated protocol and discussion sections of paper

--- a/oakland/discussion.tex
+++ b/oakland/discussion.tex
@@ -2,7 +2,7 @@
 \label{sec:discussion}
 
 In this section, we discuss the various technical, political, and legal limitations
-of OCD, as well as possible avenues for future work. 
+of \system{}, as well as possible avenues for future work. 
 
 \paragraph{CDNs operated by content hosts} The design of \system{}
 assumes that the entities operating the proxies and delivering content are
@@ -15,38 +15,24 @@ entity as the original server, it also knows the keys that are shared with the c
 As a result, the CDN cache nodes could also discover the keys and identify both
 the content, as well as which clients are requesting which content.
 
-\paragraph{Better mixing with proxy selection} In the current implementation of
-\system{}, a client's requests are all directed through the same \system{} proxy.
-Instead, a client could use a proxy autoconfiguration (PAC) file, which could direct
-requests through different proxies depending on characteristics such as which URL
-is being requested. The selection of proxies might even be randomized.  Randomizing
-the proxy that serves a particular client request ensures that no single proxy knows
-all of the requests that any particular client is making; additionally, it may make
-it more difficult for a CDN to identify the group of requests coming from a single
-client, since a client's requests would mixed among multiple proxies. 
+\paragraph{Exit proxies run by volunteers} In the description of \system{} in Sections 
+\ref{sec:design} and \ref{sec:protocol}, we assume we are running the exit proxies, but 
+the design of the system also allows for clients to run exit proxies.  Exit proxies are not 
+trusted with client identities and information, which allows for volunteers to run exit proxies.  
+The addition of an exit proxy follows the protocol in consistent hashing for when a new node 
+joins; some keys would be transferred to the new exit proxy, and clients' mapping of 
+exit proxies will be updated.  This allows for the load to be split among more proxies and 
+increases the geographic diversity of the exit proxies.
 
-\paragraph{Chosen plaintext attacks} A CDN operator could attempt to
-determine whether a particular URL was being accessed by sending requests
-through specific \system{} proxies and observing the corresponding obfuscated
-requests and responses in the CDN cache logs. Blinding the clients' requests
-with a random nonce that is added by the proxy should prevent against this
-attack. We also believe that such an attack reflects a stronger attack: from a
-law enforcement perspective, receiving a subpoena for {\em existing} logs and
-data may present a lower legal barrier than compelling a CDN to attack a
-system.
-
-\paragraph{Defending against spoofed content updates} Because the CDN cache
-nodes do not know either the content that they are hosting or the URLs
-corresponding to the content, an attacker could masquerade as an origin server
-and could potentially push bogus content for a URL to a cache node. There are
-a number of defenses against this possible attack. This simplest solution is
-for CDN cache nodes to authenticate origin servers and only accept updates
-from trusted origins; this approach is plausible, since many origin servers already
-have a corresponding public key certificate through the web PKI hierarchy.  An additional
-defense is to make it difficult for to discover which obfuscated URLs correspond
-to which content that an attacker wishes to spoof; this is achievable by design.
-A third defense would be to only accept updates for content from the same origin
-server that populated the cache with the original content.
+%\paragraph{Better mixing with proxy selection} In the current implementation of
+%\system{}, a client's requests are all directed through the same \system{} proxy.
+%Instead, a client could use a proxy autoconfiguration (PAC) file, which could direct
+%requests through different proxies depending on characteristics such as which URL
+%is being requested. The selection of proxies might even be randomized.  Randomizing
+%the proxy that serves a particular client request ensures that no single proxy knows
+%all of the requests that any particular client is making; additionally, it may make
+%it more difficult for a CDN to identify the group of requests coming from a single
+%client, since a client's requests would mixed among multiple proxies. 
 
 \paragraph{Legal questions and political pushback} Recent cases surrounding
 the Stored Communications Act in the United States raise some questions over
