--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -82,31 +82,52 @@ a legitimate publisher.  The publisher must present the old obfuscated content t
 her new obfuscated content to the CDN. 
 
 \paragraph{Updating Keys}
-\annie{fill me in}
+A content publisher must be able to update keys in case of compromise.  To minimize the amount of time a key is compromised for, the 
+content publisher specifies an expiration date and time for the key when it is originally generated.  The content publisher 
+periodically checks if the key is valid or not based on the expiration timestamp.  If the key is still valid, the content publisher 
+continues to use it.  Otherwise, the content publisher generates a new key $k_{new}$, computes HMAC$_{k_{new}}$(URL), and 
+encrypts the content (and possibly certificate) with $k_{new}$.  The content publisher then follows the same steps as in Updating 
+Content to push the content to the CDN, and it publishes $k_{new}$ encrypted with the exit proxy's public key in it's DNS SRV record.
+
+The corresponding exit proxy must also be able to fetch this new key $k_{new}$ and replace the expired key with it.  When the exit proxy 
+sees an incoming request for a URL that uses key $k$, it first checks $k$'s timestamp.  If valid, then it continues as normal.  Otherwise, 
+it sends a DNS request to the publisher's authoritative DNS, and extracts \{$k_{new}$\}$_{PK_{proxy}}$ from the DNS response.  Then the exit 
+proxy decrypts it to obtain $k_{new}$, updates its version of the key, and proceeds as normal.
 
 \subsection{Retrieving Content}
 \label{sec:retrieve}
 The steps taken for an end-user to retrieve a web page that has been cached by \system{} are shown in Figure \ref{fig:retrieving}.  
-The end-user must first configure her browser to use an \system{}-designated proxy, meaning a proxy that is a part of the system, but not controlled by the 
-CDN provider.  A client is assigned to a 
-specific proxy based on her location, and she configures her browser to use the assigned proxy.    Then, once she sends a request for a 
-web page, it goes to the proxy via a TLS connection.  The proxy then resolves the domain using it's local resolver, which will 
-redirect it to the CDN's DNS resolver. 
+In this section, we assume the client has already joined the system, which is described in more detail in Section \ref{sec:join}; at this 
+stage, the client has knowledge of a subset of it's peers (other \system{} clients) and a mapping of exit proxies and which URLs they hold 
+keys for.  The client generates a request for a specific URL, and looks up which exit proxy holds the key for that URL in its local mapping.  Next, 
+the client selects a source route; this source route allows the client to specify which mode of \system{} they would like to use: 1) no additional source 
+route, which has better performance, or 2) a source route, which has better privacy.  If the client decides to use the privacy-preserving mode, 
+then she generates a source route, which includes some of her peers, and could potentially include a false originator (as described in Section \ref{sec:proxies}).
+Before sending the request, the client generates a session key $k_{session}$ and encrypts it with the exit proxy's public key.  The client appends both the source route and \{k$_{session}$\}$_{PK_proxy}$ to the request, and sends it onto the next proxy in the source route, which could be either another client proxy or the exit proxy.  The request is forwarded 
+through all subsequent hops in the source route until it reaches the exit proxy.  The exit proxy decrypts \{k$_{session}$\}$_{PK_proxy}$ with its private key and stores 
+the source route locally.   The exit proxy then resolves the domain using it's local resolver, which will redirect it to the CDN's DNS resolver. 
 
 In order for the proxy to generate the obfuscated identifier to query the edge server for the correct content, 
-it must have one of the $n$ shared keys that the origin server generated and obfuscated the content and identifier 
-with.  These steps are shown in Figure \ref{fig:keys}.  The origin server publishes the shared key encrypted with the proxy's public key\footnote{Additionally, the origin server 
-can learn the proxy's public key via DNS as well; for example, the proxy can publish its public key in the DNS SRV record.} in the DNS SRV record; therefore, 
+it must have the shared key $k$ that the origin server generated and obfuscated the content and identifier 
+with.  These steps are shown in Figure \ref{fig:keys}.  The origin server publishes the shared key encrypted with the proxy's public key%\footnote{Additionally, the origin server 
+%can learn the proxy's public key via DNS as well; for example, the proxy can publish its public key in the DNS SRV record.} 
+in the DNS SRV record; therefore, 
 when the proxy sends a DNS request to the origin server's authoritative DNS server, it will receive the encrypted shared 
 key, which it can decrypt with it's private key.  Because the list of \system{} proxies is publicly available, it is simple for a 
-content publisher to retrieve the list of proxies and ensure that she encrypts the shared key with each proxy's public key.
+content publisher to retrieve the list of proxies and ensure that she encrypts the shared key with the correct proxy's public key (based on consistent hashing).
 
-Now that the proxy has obtained a shared key from the origin server, it can generate the obfuscated content identifier based 
+Now that the proxy has obtained the shared key $k$ from the origin server, it can generate the obfuscated content identifier based 
 on the request the client sent.  It computes the HMAC of the URL with the shared key.  The proxy then 
 sends the (obfuscated) request to the edge server, where the CDN locates the content associated with the identifier.  The CDN returns 
 the associated obfuscated content, which we recall is the fixed size blocks encrypted with the same shared key that the identifier was 
 obfuscated with.  The proxy can decrypt the content blocks with the shared key from the origin server, assemble the blocks, and strip any 
-added padding, to reconstruct the original content.\footnote{Proxies can cache content in times of a flash crowd to minimize correlation attacks when a provider has encrypted and unencrypted content on the same CDN.  This raises billing issues because the CDN can’t charge as much if edge servers don’t see as many requests for the origin; fortunately, RFC 2227 describes a solution for this~\cite{rfc2227}.}  Finally, the proxy returns the content to the client over TLS.  
+added padding, to reconstruct the original content.\footnote{Proxies can cache content in times of a flash crowd to minimize correlation attacks when a provider has encrypted and unencrypted content on the same CDN.  This raises billing issues because the CDN can’t charge as much if edge servers don’t see as many requests for the origin; fortunately, RFC 2227 describes a solution for this~\cite{rfc2227}.}  
+
+Lastly, the exit proxy must send the response back to the correct client without knowing who the client is.  First, the exit proxy fetches the session key $k_{session}$ 
+that it stored for the corresponding incoming request, and it uses this key to encrypt the response.  Then, it looks up the source route it stored for the corresponding request 
+and uses multicast routing to send to the encrypted response to all clients on the source route.  At this point, the exit proxy can delete the source route and session key entries 
+for this request/response.  Only the original (true) client has $k_{session}$, so only the original (true) client can decrypt the response.  All other clients will discard 
+the encrypted response because they cannot decrypt it.  
 
 %\begin{enumerate}
 %\item Send GET foo.com request to proxy using TLS connection\footnote{Include some form of blinding here such that client1 and client2 request the same URL, but the contents of step 1 look different by adding some randomness at the client, and that the proxy can remove \url{https://en.wikipedia.org/wiki/Blinding_(cryptography)} --- this prevents a malicious CDN from running a client and sending requests to learn things about other clients.}
@@ -130,6 +151,14 @@ added padding, to reconstruct the original content.\footnote{Proxies can cache c
 %    \caption{}
 %    \label{fig:retrieving}
 %\end{figure*}
+
+\subsection{Clients Joining \& Leaving}
+\label{sec:join}
+
+When a client joins \system{}, they will download \system{} client software.  This includes information about exit proxy mappings to URLs for which they hold a key, 
+software for modifying requests with session keys and source routes, and software for running a proxy.  Clients will learn about other clients in the system via 
+a gossip protocol.  We do not detail this as gossip protocols have been studied extensively in the past.  Similarly, when a client leave the system, this 
+information is propogated to its peers using a gossip protocol.
 
 \subsection{Partial Deployment}
 \label{sec:partial}
@@ -198,8 +227,24 @@ at the CDN, then DNS response must also change; therefore, the pre-fetched DNS r
 lifetime that is shorter than the lifetime of the content on a cache node.
 
 \paragraph{Load Balance Proxy Selection} As the proxy performs a number of operations on the client's behalf, it 
-runs into the possibility of being overloaded.  With \system{}, a client can be redirected to different 
-proxies based on load; this can be implemented with a PAC file, which allows 
-a client to access different proxies for different domains.  In addition to being a performance benefit, 
-this could also prevent a country from blocking the set of proxies that all of the country's citizens use; if 
-this occurs, then the citizens can be redirected to a different proxy.   
+runs into the possibility of being overloaded.  \system{} uses consistent hashing to generally address the load balancing 
+problem, but an edge case that may still cause some exit proxies to be overloaded is extremely popular content.  To mitigate this, 
+multiple exit proxies can store the shared key $k$ for the URL that is extremely popular, and therefore divide the load, while 
+still taking advantage of the the CDNs caching benefits.  
+
+\paragraph{Use \system{} for Partial Content} Different content publishers have different needs, and each content publisher might 
+have different needs for different content.  The design of \system{} allows content publishers to publish some of their content 
+on \system{} and some on other CDNs.  This is useful in a case where some content is more sensitive, while other content needs better 
+performance.  
+
+\paragraph{Different Modes of Operation}  As briefly mentioned in Section \ref{sec:retrieve}, there are two different modes of 
+operation, where one provides better performance, and the other provides better privacy.  In the first mode, the client 
+can choose to send her request directly to the exit proxy, and not forward her request through any of her peers.  While this 
+allows the exit proxy to identify her, it does not allow the CDN to identify her or her request.  In the second mode, the 
+client forwards her request through a set of peers before it reaches the exit proxy.  In this mode, the client can decide to 
+prepend other clients' identifiers before her own, so it appears as if the request came from a different client.  This 
+provides unlinkability between the client and the request.  This mode also provides the option of {\it only} prepending other clients' 
+identifiers and then forwarding the request directly to the exit proxy; this provides the same performance benefit as the first mode, 
+but also provides unlinkability.  While this seems like the optimal solution, it cannot be the only option because the exit proxy 
+would always know that the true client is the previous hop in the source route.  These two modes of operation provide the client 
+with different ways to use the system both based on their privacy preferences and based on the type of content they are requesting.
