--- a/oakland/bare_conf.tex
+++ b/oakland/bare_conf.tex
@@ -404,7 +404,7 @@ country that differs from their own. Many  battles over stored data privacy
 have played out in the courts, with legal opinions rendering essentially
 ambiguous outcomes thus far. This paper offers a technical contribution to
 this tussle. We first analyze the privacy  issues a CDN faces in the presence
-of a government (or insider) who would wish to access information about what
+of a government (or third party) who would wish to access information about what
 data is being stored on the CDN and who is accessing it. To mitigate the
 resulting threats, we design and implement \system{}, a system that provides {\em
 oblivious content distribution}, a property that allows CDNs to provide the
