updated threat model

--- a/oakland/background.tex
+++ b/oakland/background.tex
@@ -38,7 +38,7 @@ CDNs today.}
 \end{figure}
 
 \subsection{Information Visible to CDNs}
-
+\label{sec:info}
 Because the CDN interacts with both content publishers and clients, as shown in Figure \ref{fig:basic_cdn}, it is in a unique position 
 to learn an enormous amount of information.  CDN providers know information about all clients who
 access data stored at the CDN, information about all content publishers that cache content at 
@@ -106,8 +106,8 @@ Association of America (RIAA) and the Motion Picture Association of America (MPA
 content that allegedly infringes on copyright, trademarks, and patent rights; CDNs are a more convenient target of these takedown notices than 
 the content provider because oftentimes the content provider is either located in a jurisdiction where it is difficult to enforce the takedown, 
 or it is difficult to determine the owner of the content \cite{medium_copyright,eff_copyright}.  While U.S. law Section 230 protects intermediaries, such as CDNs, from being held 
-liable for the content they distribute, there have been cases where CDNs are forced to remove content.  In 2015, a district court ruled in 
-favor of RIAA, which forced Cloudflare to remove Grooveshark-related sites (sites with pretending to be Grooveshark, but were in fact not) within 48 hours \cite{techdirt_copyright}.  
+liable for the content they distribute, there have been cases where CDNs are forced to remove content.  This happened in 2015, as mentioned in Section \ref{sec:info}, which 
+involved the RIAA, Cloudlfare, and Grooveshark \cite{techdirt_copyright}.  
 And again in 2017, a district court ruled that Cloudflare is not protected from anti-piracy injuctions by the Digital Millennium Copyright Act (DMCA); the 
 RIAA obtained a permanent injunction against a site known as MP3Skull, which contained pirated content, and was distributed by Cloudflare.  The ruling 
 did not specify that Cloudflare was enjoined with MP3Skull under the DMCA, but rather that Cloudflare was helping MP3Skull in evading the injunction (under 
