--- a/oakland/threat_model.tex
+++ b/oakland/threat_model.tex
@@ -79,10 +79,8 @@ T-Systems~\cite{microsoft_germany}.  This was deployed in hopes of preventing th
 for data stored in Germany, where German citizens (or others) can request to have their data stored.  Unfortunately, this issue has 
 been debated in courts with varying outcomes; in a current legal battle, Google 
 has been ordered to comply with the warrant, despite the data requested, emails, are stored abroad~\cite{google_warrant}.
-  To complement these legal battles, \system{} should take 
-these conflicting jurisdictional issues into account.  Additionally, the system should be able to protect 
-the privacy of clients' locations; while addressing data privacy concerns in the client's jurisdiction, \system{} 
-should not reveal more information about clients.  It should also provide the ability for clients 
+  To complement these legal battles, \system{} should provide CDN functionality, while not having to trust 
+the CDN to keep client information private.  It should also provide the ability for clients 
 to hide their location and make their requests unlinkable to their identity.
 
 \paragraph{Key use and management} \system{} should be able to achieve the previously mentioned security 
