--- a/oakland/sigproc.bib
+++ b/oakland/sigproc.bib
@@ -25,6 +25,17 @@
   publisher={IEEE}
 }
 
+@inproceedings{barford1998generating,
+  title={Generating representative web workloads for network and server performance evaluation},
+  author={Barford, Paul and Crovella, Mark},
+  booktitle={ACM SIGMETRICS Performance Evaluation Review},
+  volume={26},
+  number={1},
+  pages={151--160},
+  year={1998},
+  organization={ACM}
+}
+
 @misc{google_warrant,
   title = "{Google must turn over foreign-stored emails pursuant to a warrant, court rules}",
   key = "Google",
