minor paper updates

--- a/oakland/background.tex
+++ b/oakland/background.tex
@@ -44,8 +44,8 @@ to learn an enormous amount of information.  CDN providers know information abou
 access data stored at the CDN, information about all content publishers that cache content at 
 CDN edge servers, and information about the content itself.
 
-\paragraph{Knowing the content}  CDNs, by nature, have access to all content that they distribute, as well as the 
-content identifier, the URL.  First, the CDN must use the URL, which is not 
+\paragraph{Knowing the content}  CDNs, by nature, have access to all content that they distribute, as well as 
+the URL.  First, the CDN must use the URL, which is not 
 encrypted or hidden, to locate the content. Therefore, it is evident that the CDN already knows what content is 
 stored in its caches.  And because CDNs provide analytics to content publishers, they keep track of cache hit 
 rates, and how often content is accessed.  But the CDN does not just know about the content identifier, it also 
