--- a/oakland/security.tex
+++ b/oakland/security.tex
@@ -2,6 +2,17 @@
 \label{sec:sec}
 We analyze and discuss how \system{} addresses different attacks.
 
+\begin{table*}[t!]
+\centering
+\begin{tabular}{| l | l | l | l | l |} 
+ \hline
+
+ \hline
+\end{tabular}
+\caption{Design goals and the corresponding design choices made in \system{}.}
+\label{tab:design_goals}
+\end{table*}
+
 {\bf Popularity Attacks.}  An attacker that has requested or otherwise 
 gained access to CDN cache logs can learn information about how often 
 content was requested.  Because not all content is requested uniformly, the 
