--- a/oakland/threat_model.tex
+++ b/oakland/threat_model.tex
@@ -5,30 +5,28 @@ attacker, and introduce the design goals and protections provided by \system{}.
 
 \subsection{Threat Model}
 \label{sec:attacker}
-Our threat model addresses a passive, but powerful attacker.  This passive attacker can 
-be described by two different models: 1) the CDN operator itself or 2) a third party, such 
-as a government, who wishes to learn information about the CDN. 
-Both types of adversaries wish to take advantage of the knowledge that a CDN has.  
 
-We address an attacker who wants to learn what content each client is accessing; this 
-could mean learning either the identifier of the content, such as a URL, or the actual 
-content of the web page.  Additionally, we are concerned with a passive attacker who 
-wishes to learn information that compromises the privacy of Internet 
-users.  An active attacker that attempts to modify and/or delete data is out of the 
-scope of this work.
+Our threat model is a passive, but powerful adversary.  We are concerned with an 
+adversary who has many different capabilities.  A potential adversary could gain 
+access to the CDNs logs, which can contain client IP addresses and URLs.  Additionally, 
+he could join \system{} as either a client or any number of clients; he is also capable 
+of joining the system as an arbitrary number of exit proxies.  The adversary could 
+also act as an origin server (a content publisher).  The potential attacker not only has the 
+power to perform any of these actions, but can do these simultaneously.  For example, the 
+adversary could join as a client, an exit proxy, and request access to the CDN's logs.  The 
+goal of this type of adversary is to learn about the content being stored at the CDN and/or 
+learn about which clients are accessing which content.  
 
-In the case of the CDN provider being the adversary, he can view access logs and 
-plaintext content. But in the case that he cannot view the content identifiers, he can try to make inferences. He 
-can infer the popularity of content based on the number of accesses and infer the web page 
-from the popularity. Additonally, this attacker may be able to infer a web page based on the length of the 
-content.  This adversary could be an inside attacker or an insider who is 
-compelled to provide data. 
+This adversary has many strong capabilities making him a powerful adversary.  There has been 
+precedent of this type of attacker; for example, governments have demanded access to CDNs' 
+data~\cite{cloudflare_nsl}.  A possible adversary is a government requesting logs from the CDN, but 
+the government could also be colluding with a CDN.  Additionally, the adversary could be a CDN operator, 
+himself.  
 
-In the case of an adversarial government or nation-state, the attacker could compel 
-the CDN to divulge information, such as access logs or content.  This adversary can 
-serve an overreaching subpoena or National Security Letter.  This is a realized 
-attacker, as we know that this has actually already occured, and which was discussed 
-in Section \ref{sec:background}~\cite{cloudflare_nsl}.
+As mentioned, \system{} addresses a {\it passive} adversary; active attackers are out of the 
+scope of this work.  Prior work on securing CDNs has introduced methods to handle an actively 
+malicious adversary by preserving the integrity of content stored on CDN cache nodes~\cite{levy2015stickler}.  
+We do not address an adversary that tampers, modifies, or deletes any data, content, or requests.  
 
 \subsection{Security and Privacy Goals for \system{}}
 \label{sec:goals}
@@ -58,7 +56,7 @@ and we further discuss our design decisions in Section \ref{sec:design}.
 %\label{tab:design_goals}
 %\end{table*}
 
-\paragraph{Prevent the CDN from knowing information} First, and foremost, the CDN 
+\paragraph{Prevent the CDN from knowing the content it is caching} First, and foremost, the CDN 
 should not have access to all the information that was outlined 
 in Section \ref{sec:background}.  By limiting the information that the CDN knows, \system{} limits 
 the amount of information that an adversary can learn or request.  \system{} should hide 
@@ -68,28 +66,33 @@ does not know what content it is caching, who is requesting it, or who has creat
 inside attacker will not be able to learn valuable information, and the CDN will not be able to supply 
 a government adversary with the requested data.
 
-\paragraph{System of proxies} There have been many legal battles over which government is allowed access 
-to which data; for example, data can be stored in Country X, but belonging to an organization in Country Y, and 
-the data is about a person in Country Z.  It is unclear which of these countries can legally demand 
-the data with a subpoena or warrant.  The issue becomes much more complex when the specific laws 
-and policies of the different countries are conflicting.  Perhaps Country X has much stronger data privacy 
-guarantees and enforcement than Country Y or Z.  A recent approach taken by Microsoft was to establish 
-a datacenter in Germany, which is technically under the control of the Deutsche Telekom subsidiary 
-T-Systems~\cite{microsoft_germany}.  This was deployed in hopes of preventing the United States government from serving Microsoft with a subpoena 
-for data stored in Germany, where German citizens (or others) can request to have their data stored.  Unfortunately, this issue has 
-been debated in courts with varying outcomes; in a current legal battle, Google 
-has been ordered to comply with the warrant, despite the data requested, emails, are stored abroad~\cite{google_warrant}.
-  To complement these legal battles, \system{} should provide CDN functionality, while not having to trust 
-the CDN to keep client information private.  It should also provide the ability for clients 
-to hide their location and make their requests unlinkable to their identity.
+\paragraph{Prevent the CDN from knowing the identity of users accessing content}
 
-\paragraph{Key use and management} \system{} should be able to achieve the previously mentioned security 
-and privacy goals while not introducing new attacks.  More specifically, \system{} should maintain the 
-caching benefits of a traditional CDN while still reducing 
-the probability of attacks occuring, and reducing the probability of any information leakage in 
-the case of an attack.
+\paragraph{Prevent an adversary from ...} \annie{I'm trying to get at protecting against an adversary that 
+joins the system as a client/exit/publisher, and requests access from the CDN}
 
-%{\bf Origin Server.} The content publisher may want to publish sensitive or controversial 
+%\paragraph{System of proxies} There have been many legal battles over which government is allowed access 
+%to which data; for example, data can be stored in Country X, but belonging to an organization in Country Y, and 
+%the data is about a person in Country Z.  It is unclear which of these countries can legally demand 
+%the data with a subpoena or warrant.  The issue becomes much more complex when the specific laws 
+%and policies of the different countries are conflicting.  Perhaps Country X has much stronger data privacy 
+%guarantees and enforcement than Country Y or Z.  A recent approach taken by Microsoft was to establish 
+%a datacenter in Germany, which is technically under the control of the Deutsche Telekom subsidiary 
+%T-Systems~\cite{microsoft_germany}.  This was deployed in hopes of preventing the United States government from serving Microsoft with a subpoena 
+%for data stored in Germany, where German citizens (or others) can request to have their data stored.  Unfortunately, this issue has 
+%been debated in courts with varying outcomes; in a current legal battle, Google 
+%has been ordered to comply with the warrant, despite the data requested, emails, are stored abroad~\cite{google_warrant}.
+%  To complement these legal battles, \system{} should provide CDN functionality, while not having to trust 
+%the CDN to keep client information private.  It should also provide the ability for clients 
+%to hide their location and make their requests unlinkable to their identity.
+
+%\paragraph{Key use and management} \system{} should be able to achieve the previously mentioned security 
+%and privacy goals while not introducing new attacks.  More specifically, \system{} should maintain the 
+%caching benefits of a traditional CDN while still reducing 
+%the probability of attacks occuring, and reducing the probability of any information leakage in 
+%the case of an attack.
+
+%%%%%{\bf Origin Server.} The content publisher may want to publish sensitive or controversial 
 %content.  For example, perhaps he wants to publish information that goes against the current 
 %regime in his country.  An adversary could trace the content cached by a CDN back to the 
 %publisher, and then that publisher could subsequently be punished.  \system{} provides a 
@@ -112,9 +115,9 @@ the case of an attack.
 %trying to protect cached content from attacks; for example, Akamai blocks Tor users~\cite{khattak2016you}.    \system{} would prevent 
 %privacy-concious Tor users from being blocked at CDNs.  Lastly, some CDNs, due to their ability 
 %to view cross site browsing patterns, could de-anonymize Tor users~\cite{cloudflare_tor}, but \system{} would 
-%prevent a CDN from compromising the anonymity of Tor users.
+%%%%%prevent a CDN from compromising the anonymity of Tor users.
 
 A strength of \system{} is that it protects the origin server, the CDN itself, and the client, whereas 
 existing systems, such as Tor, only protect the client.
 
-% where do we include this information? Proxy: 1) Protects clients by blinding, etc., 2) Jurisdictional protections by only being vulnerable to a single country’s subpoena (and this puts a smaller set of clients at risk than all CDN customers)
+\subsection{Performance Considerations}
