new figures (figures 2, 3)

--- a/oakland/design.tex
+++ b/oakland/design.tex
@@ -45,13 +45,13 @@ many questions: are anonymizing proxies/VPNs trustworthy?, should clients be tru
 can any jurisdiction still subpoena the CDN for information (presumably the CDN has locations in many 
 countries and clients in many countries)?, and if a subpoena is served, what is learned?
 
-\begin{figure*}[t!]
+\begin{figure}[t!]
 \centering
-\includegraphics[width=.9\textwidth]{full_ocd_system}
+\includegraphics[width=.5\textwidth]{ocdn_overview_new2}
 \caption{The relationships between clients, the CDN, proxies, and content publishers in 
 \system{}.}
 \label{fig:ocd_overview}
-\end{figure*}
+\end{figure}
 
 \subsection{System of Proxies}
 \label{sec:proxies}
