--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -1,9 +1,9 @@
-\begin{figure*}[t!]
+\begin{figure}[t!]
 \centering
-\includegraphics[width=.8\textwidth]{publishing_content}
+\includegraphics[width=.45\textwidth]{publishing_content_new2}
 \caption{Step-by-step instructions on how content is published in \system{}.}
 \label{fig:publishing}
-\end{figure*}
+\end{figure}
 
 \section{\system{} Protocol}
 \label{sec:protocol}
