--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -166,12 +166,12 @@ information is propogated to its peers using a gossip protocol.
 the system should still provide protections.  We have two different partial deployment plans, and both provide protections for those 
 publishers, CDNs, and clients that use \system{}. 
 
-\begin{figure*}[t!]
+\begin{figure}[t!]
 \centering
-\includegraphics[width=.8\textwidth]{retrieving_content}
+\includegraphics[width=.5\textwidth]{retrieving_content_new2}
 \caption{Steps for retrieving content in \system{}.}
 \label{fig:retrieving}
-\end{figure*}
+\end{figure}
 
 \paragraph{Deployment Option 1}
 One option for deploying \system{} is to ensure there is some set $S$ of content publishers the participate fully in the 
