--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -173,6 +173,13 @@ publishers, CDNs, and clients that use \system{}.
 \label{fig:retrieving}
 \end{figure}
 
+\begin{figure}[t!]
+\centering
+\includegraphics[width=.5\textwidth]{retrieving_content_new_complex2}
+\caption{Steps for retrieving content in \system{}.}
+\label{fig:retrieving2}
+\end{figure}
+
 \paragraph{Deployment Option 1}
 One option for deploying \system{} is to ensure there is some set $S$ of content publishers the participate fully in the 
 system.  These publishers obfuscate their content, identifiers, and certificates, and most importantly, only have 
