--- a/oakland/background.tex
+++ b/oakland/background.tex
@@ -31,7 +31,7 @@ caches the response, and returns the content to the client.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.5\textwidth]{background_cdn}
+\includegraphics[width=.5\textwidth]{plain_cdn_new2}
 \caption{The relationships between clients, the CDN, and content publishers in 
 CDNs today.}
 \label{fig:basic_cdn}
