--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -208,7 +208,7 @@ is not susceptible to flashcrowds correlations and can still join the system.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.45\textwidth]{key_management}
+\includegraphics[width=.45\textwidth]{key_lookup_new}
 \caption{Steps for distributing keys to proxies.}
 \label{fig:keys}
 \end{figure}
