added security analysis table and performance graphs

--- a/oakland/bare_conf.tex
+++ b/oakland/bare_conf.tex
@@ -325,6 +325,8 @@
 \usepackage[sort]{cite}
 \usepackage{balance}
 \usepackage{svg}
+\usepackage{tikz}
+\def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 
 \graphicspath{ {./figures/} }
 
