--- a/oakland/performance.tex
+++ b/oakland/performance.tex
@@ -31,4 +31,18 @@
 \label{fig:stages}
 \end{figure*}
 
+\begin{figure}[t!]
+\centering
+\includegraphics[width=.45\textwidth]{Latency}
+\caption{Latency.}
+\label{fig:latency}
+\end{figure}
+
+\begin{figure}[t!]
+\centering
+\includegraphics[width=.45\textwidth]{loggrouped}
+\caption{Overhead of different operations}
+\label{fig:overhead2}
+\end{figure}
+
 \subsection{Scalability}
