--- a/oakland/sigproc.bib
+++ b/oakland/sigproc.bib
@@ -209,6 +209,15 @@
   year={2015}
 }
 
+@inproceedings{clarke2001freenet,
+  title={Freenet: A distributed anonymous information storage and retrieval system},
+  author={Clarke, Ian and Sandberg, Oskar and Wiley, Brandon and Hong, Theodore W},
+  booktitle={Designing privacy enhancing technologies},
+  pages={46--66},
+  year={2001},
+  organization={Springer}
+}
+
 @misc{rfc2227,
   title = "{Simple Hit-Metering and Usage-Limiting for HTTP}",
   key = "Simple",
@@ -219,6 +228,13 @@
   title = "{2nd Circuit denies rehearing in Microsoft Ireland case by an evenly divided vote}",
   key = "2nd", 
   howpublished = {\url{https://www.washingtonpost.com/news/volokh-conspiracy/wp/2017/01/24/2nd-circuit-denies-rehearing-in-microsoft-ireland-case-by-an-evenly-divided-vote/?utm_term=.7007ac9e4dbc}}
+}
+
+@techreport{dingledine2004tor,
+  title={Tor: The second-generation onion router},
+  author={Dingledine, Roger and Mathewson, Nick and Syverson, Paul},
+  year={2004},
+  institution={Naval Research Lab Washington DC}
 }
 
 @misc{microsoft_germany,
